# Process this file with automake to produce Makefile.in.
#
# Copyright (C) 2005, 2006  Deneys S. Maartens  <dsm@tlabs.ac.za>
# Copyright (C) 2006--2012  Enrico Zini <enrico@enricozini.org>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software Foundation,
# Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

#if OLD_GRIB
#bin_PROGRAMS += \
#    hrit/GRIB2NetCDF \
#    hrit/XRIT2Grib
#
#hrit_GRIB2NetCDF_CPPFLAGS = \
#    -I$(top_srcdir)/grib $(NETCDF_CFLAGS)
#hrit_GRIB2NetCDF_SOURCES = \
#    grib/Ebisuzaki.cpp \
#    grib/GRIB.cpp \
#    hrit/GRIB2NetCDF.cpp
#
#hrit_XRIT2Grib_CPPFLAGS = \
#    -I$(top_srcdir)/grib
#hrit_XRIT2Grib_SOURCES = \
#    grib/Ebisuzaki.cpp \
#    grib/GRIB.cpp \
#    hrit/XRIT2Grib.cpp
#endif
